[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
prost = "0.9"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.6"
zookeeper = "0.6.1"

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }
